--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="styles.css"> <!-- CSSファイルをリンク -->
-       <title>HTMLとCSSのつなげ方</title>
+       <title>Scratch API Search</title>
    </head>
    <body>
-       <h1>こんにちは、世界！</h1>
+      <h1>Scratch API Search</h1>
    </body>
    </html>
    
