--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id='button-list'>
     <!-- ホームボタン -->
     <!-- example に 自分のブログ URL を入力 -->
-    <div id='home-button'><a href='https://dorakoma.github.io/Scratch-API-Search/Page/home.html'>Home</a></div>
-       <a href="https://dorakoma.github.io/Scratch-API-Search/Page/home.html"><img src="Home.png" alt="次へ"></a>
+    <a href="https://dorakoma.github.io/Scratch-API-Search/Page/home.html"><img src="Home.png"></a>
     </div>
     <h1>Scratch API Search</h1>
 
