--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+　　<!DOCTYPE html>
    <html lang="ja">
    <head>
        <meta charset="UTF-8">
@@ -13,7 +13,8 @@
     <div id='button-list'>
     <!-- ホームボタン -->
     <!-- example に 自分のブログ URL を入力 -->
-    <a href="https://dorakoma.github.io/Scratch-API-Search/Page/home.html"><img src="Home.png" width="50" height="50"style="padding-top: 20px;"></a>
+    <p›Home</p>
+   <a href="https://dorakoma.github.io/Scratch-API-Search/Page/home.html"><img src="Home.png" width="50" height="50"style="padding-top: 20px;"></a>
     </div>
     <h1>Scratch API Search</h1>
 
